# gex-app

./: .gitignore  CLAUDE.md  PROGRESS.md  README.md  SECURITY.md  plan.md  pyproject.toml
.claude/: settings.local.json
.claude/plans/: 1-ink-glass-ui-redesign.md  2026-05-24-unusual-option-activity.md  2026-05-28-ai-chat-assistant.md
.planning/sketches/: MANIFEST.md
.planning/sketches/001-uoa-tape/: README.md  index.html
.planning/sketches/themes/: default.css
backend/: .env.example  config.py  flashalpha_agent.py  main.py  models.py
backend/adapters/: base.py  flash_alpha.py  seed.py
backend/data/snapshots/: snapshots_2026-05-21.json
backend/routers/: chat.py  dealer_risk.py  flow_signals.py  gex.py  system.py
backend/services/: cache.py  chat.py  indicators.py  snapshots.py
backend/tests/: test_chat_specialists.py  test_indicators.py
docs/superpowers/plans/: 2026-05-27-uoa-multi-symbol.md  2026-05-28-ai-chat-assistant.md  2026-05-28-uoa-top-movers-leaderboard.md  2026-05-29-per-stream-refresh-intervals.md  2026-06-04-agent-view.md  2026-06-07-multi-agent-chat.md  2026-06-08-technical-analyst-agent.md
docs/superpowers/specs/: 2026-05-29-per-stream-refresh-intervals-design.md  2026-06-04-agent-view-design.md  2026-06-07-multi-agent-chat-design.md  2026-06-08-technical-analyst-agent-design.md  2026-06-11-ink-glass-ui-redesign-design.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: GEXProfileChart.jsx  InstrumentColumn.jsx  IntradayChart.jsx  (+3 more)
(+45 files in other folders)
