[project]
name = "gex-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "httpx>=0.28.1",
    "logfire>=4.34.0",
    "pydantic>=2.0.0",
    "pydantic-ai>=1.104.0",
    "pydantic-settings>=2.14.1",
    "tzdata>=2026.2",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
